; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_server.c_handle_bind_error.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_server.c_handle_bind_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REJECT_TEMPORARY_CONGESTION = common dso_local global i32 0, align 4
@REJECT_LOCAL_LIMIT_EXCEEDED = common dso_local global i32 0, align 4
@REJECT_PROTOCOL_VERSION_NOT_SUPPORTED = common dso_local global i32 0, align 4
@REJECT_UNKNOWN_AUTHN_SERVICE = common dso_local global i32 0, align 4
@REJECT_INVALID_CHECKSUM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"unexpected status value %d\0A\00", align 1
@REJECT_REASON_NOT_SPECIFIED = common dso_local global i32 0, align 4
@NDR_LOCAL_DATA_REPRESENTATION = common dso_local global i32 0, align 4
@RPC_VER_MAJOR = common dso_local global i32 0, align 4
@RPC_VER_MINOR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32)* @handle_bind_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @handle_bind_error(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %17 [
    i32 129, label %7
    i32 133, label %9
    i32 131, label %9
    i32 130, label %11
    i32 128, label %13
    i32 134, label %15
    i32 132, label %20
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @REJECT_TEMPORARY_CONGESTION, align 4
  store i32 %8, i32* %5, align 4
  br label %22

9:                                                ; preds = %2, %2
  %10 = load i32, i32* @REJECT_LOCAL_LIMIT_EXCEEDED, align 4
  store i32 %10, i32* %5, align 4
  br label %22

11:                                               ; preds = %2
  %12 = load i32, i32* @REJECT_PROTOCOL_VERSION_NOT_SUPPORTED, align 4
  store i32 %12, i32* %5, align 4
  br label %22

13:                                               ; preds = %2
  %14 = load i32, i32* @REJECT_UNKNOWN_AUTHN_SERVICE, align 4
  store i32 %14, i32* %5, align 4
  br label %22

15:                                               ; preds = %2
  %16 = load i32, i32* @REJECT_INVALID_CHECKSUM, align 4
  store i32 %16, i32* %5, align 4
  br label %22

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @FIXME(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %2, %17
  %21 = load i32, i32* @REJECT_REASON_NOT_SPECIFIED, align 4
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %20, %15, %13, %11, %9, %7
  %23 = load i32, i32* @NDR_LOCAL_DATA_REPRESENTATION, align 4
  %24 = load i32, i32* @RPC_VER_MAJOR, align 4
  %25 = load i32, i32* @RPC_VER_MINOR, align 4
  %26 = load i32, i32* %5, align 4
  %27 = call i32* @RPCRT4_BuildBindNackHeader(i32 %23, i32 %24, i32 %25, i32 %26)
  ret i32* %27
}

declare dso_local i32 @FIXME(i8*, i32) #1

declare dso_local i32* @RPCRT4_BuildBindNackHeader(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
